--- a/index.html
+++ b/index.html
@@ -14,6 +14,76 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class="container">
+  <nav class="navbar">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Contact</a>
+      </nav>
+    
+  <section class="innercontainer">
+      <div class="imagecontainer">
+        <img class="picture" src="myname-unsplash.jpg" alt="header">
+        </div>
+      <div class="aboutcontainer">
+      <h1>Luis Martinez-Web Dev</h1>
+      <h2>Technology is my jam</h2>
+      <br>
+      <p>Full Stack Web Developer at Lambda School Web Developer with 8 years of experience in designing and developing user interfaces, testing, debugging,. Proven ability in optimizing web functionality that improve data retrieval and workflow efficiencies.</p></div>
+      </section>
+
+      <section>
+      <div class="good">
+      <h1>Stuff I'm Good At:</h1>
+      <p>Disc Golf</p>
+      <p>Coding up UI</p>
+      <p>Playing Video Games</p>
+      <p>Using Bootstrap grid</p>
+      <p>Taking long naps</p>
+      </div>
+  </section>
+
+  <section class="history">
+    <div><h1>Work History</h1></div>
+  </section>
+  
+  <section>
+   <div class="first">
+    <div class="#">Yrs</div>
+    <div class="#">Company</div>
+    <div class="#">Title</div>
+    <div class="#">Tech Used</div>
+   </div>
+  </section>
+
+  <section>
+    <div class="second">
+    <div class="#">1</div>
+    <div class="#">Apple</div>
+    <div class="#">Software Engineer</div>
+    <div class="#">Swift</div>
+    </div>
+  </section>
+
+  <section>
+    <div class="third">
+    <div class="#">2</div>
+    <div class="#">Microsoft</div>
+    <div class="#">Computer Science</div>
+    <div class="#">.NET</div>
+    </div>
+  </section>
+
+  <section>
+    <div class="#">3</div>
+    <div class="#">Amazon</div>
+    <div class="#">Dev Ops</div>
+    <div class="#">AWS</div>
+  </section>
+
+  <footer>
+  <p class="copyright">Copyright Awesomeness 2019</p>
+  </footer>
 </body>
 </html>
