--- a/index.html
+++ b/index.html
@@ -76,14 +76,18 @@
   </section>
 
   <section>
+    <div class="fourth">
     <div class="#">3</div>
-    <div class="#">Amazon</div>
+    <div class="#amazon">Amazon</div>
     <div class="#">Dev Ops</div>
     <div class="#">AWS</div>
+    </div>
   </section>
 
+  <section>
   <footer>
   <p class="copyright">Copyright Awesomeness 2019</p>
   </footer>
+  </section>
 </body>
 </html>
