--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <link href="https://fonts.googleapis.com/css?family=Odibee+Sans&display=swap" rel="stylesheet">
   <title>My Resume</title>
-
+  <link href="https://fonts.googleapis.com/css?family=Squada+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -14,6 +14,74 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <section class="top">
+    <div class="head">
+  <header>
+  
+  <h1>Luis Martinez</h1>
+  <div class="word">
+  <p>Full Stack Web Developer</p>
+    </div>
+  </div>
+    </header>
+  </section>
+
+  <section class="profile">
+  <div class="personal">
+    <h2>Personal Profile</h2>
+    <div class="word1">
+    <p>Web Developer with 5 years of experience in designing and developing user interfaces, testing, debugging within eCommerece technologies. Proven ability in optimizing web functionality that improve data retrival and workflow efficiencies.</p>
+  </div>
+  </div>
+  </section>
+
+  <section class="exp">
+  <div class="job1">
+    <h2 style="margin-left: 26%;">Work Experience</h2>
+    <h3>Grooming Technologies</h3>
+    <h4>Web Developer</h4>
+    <h4>2019 - Current</h4>
+      <p>Designed and deceloped user-friendly website, including optimized check-out page that increased user clicks, and subsequently customer purchases by 20%</p>
+      <p>Revamped web application security applications, minimizing hacker attacks from 2.3% to 0.02%</p>
+      <p>Fixed bugs from existing websites and implemented enhancements that significantly improved web functionality and speed</p>
+     <h3>Focus Solutions</h3>
+     <h4>Web Developer</h4>
+     <h4>2015 - 2018</h4>
+     <p>Developed dynamic and interactive website that ensured high traffic, page views, and User Experience, resulting in 40% increase in sales revenue</p>
+     <p>Implemented server that expedited document generation and search functionality by 20%</p>
+     <p>Designed processes for cleanup and performance improvement, that minimized downtime by 13%</p>
+   </div>
+  </section>
+
+  <section class="school">
+    <div class="academic">
+      <h2>Academic</h2>
+      <h3>Lambda School</h3>
+      <h4>Web Developer</h4>
+      <h4>2019 - Current</h4>
+    </div>
+  </section>
+
+<section class="info">
+  <div class="skills">
+    <h2>Skills</h2>
+    <div class="word1">
+    <p>HTML, 
+      JavaScript,
+      CSS 
+    </p>
+    </div>
+  </div>
+    <div class="contact">
+      <h2>Contact</h2>
+      <div class="word1">
+      <address style="margin-left: 44%;">
+        0927.123.4567<br>
+        San Diego, CA<br>
+        luismartinez@gmail.com<br>
+        www.luismartinez.com</address>
+    </div>
+    </div>
+  </section>
 </body>
 </html>
